--- a/aboutUs.html
+++ b/aboutUs.html
@@ -17,7 +17,7 @@
             <div class="row">
                 <div class="mentor-details">
                     <div class="mentor">
-                        <img src="images/Chathumini.jpg" alt="Chathumini"/>
+                        <img src="images/doctorPic.jpeg" alt="Chathumini"/>
                         <div class="inside">
                             <div class="information">
                                 <h5>Dr. D.M.H.D. Rathnayake</h5>
