--- a/cal-bmi.html
+++ b/cal-bmi.html
@@ -38,13 +38,12 @@
         <div class="BMI-col">
             <h1>Let's calculate your BMI</h1>
             <p>Body Mass Index is a simple calculation using a person’s height and weight. 
-                <br>The formula is BMI = kg/m2 where kg is a person’s weight is kilograms and m2 is their <br>height meters squared. A BMI 0f 25.0 more is overweight, <br>
-                 while healthy range 18.5 to 24.9.</p>
+                <br>The formula is BMI = kg/m2 where kg is a person’s 
+                weight is kilograms and m2 is their <br>height meters squared. A BMI 0f 25.0 more is overweight, <br>
+                 while healthy range 18.5 to 24.9.</p><br>
                      <a href="cal.php" class="hero-btn red-btn">CALCULATE NOW!</a>
+                     <br>
             </div>
-        <div class="BMI-col">
-            <img src="images/bmi2.jpg">
-        </div>
     </div>
 </section>
 
