--- a/doctors.html
+++ b/doctors.html
@@ -84,13 +84,14 @@
 <style>
 
 body{
-    background-image: url('doc1.jpg');
+    background-image: url(images/page2_.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
 }
 
 .page{
+    background-image: url(images/page2_.jpg);
     color: rgb(4, 5, 4);
     position: absolute;
     text-align: center;
