--- a/excersice.html
+++ b/excersice.html
@@ -43,9 +43,9 @@
                 Activities for all ages. Get inspired. Improve your health.</p>
        <a href="" class="hero-btn red-btn">GET NOW!</a>
             </div>
-        <div class="excersice-col">
+        <!-- <div class="excersice-col">
             <img src="images/workout.jpg" alt="">
-        </div>
+        </div> -->
     </div>
 
 
