--- a/meal-plan.html
+++ b/meal-plan.html
@@ -44,9 +44,9 @@
        <a class="hero-btn red-btn" href="showMealPlan.php">GET NOW!</a>
        
             </div>
-        <div class="meal-col">
+        <!-- <div class="meal-col">
             <img src="images/meal.jpg" alt="">
-        </div>
+        </div> -->
     </div>
 
 
