--- a/meet-doctor.html
+++ b/meet-doctor.html
@@ -36,16 +36,16 @@
 <section class="Calculate-BMI">
 
     <div class="row">
-        <div class="BMI-col">
+        <div class="Doc-col">
             <h1>Meet Your Doctor here</h1>
             <p>Meet your Doctor. Whether are just checking to make sure things are <br>on track, 
                 or have a specific symptom you are <br>concerned about, 
                 choosing your doctor according to your needs.</p>
        <a class="hero-btn red-btn" href="doctors.html">CHANNEL NOW!</a>
             </div>
-        <div class="BMI-col">
+        <!-- <div class="BMI-col">
             <img src="images/doc.jpg" alt="">
-        </div>
+        </div> -->
     </div>
 
 
